changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Inform player of changes in wc, ac and speed.
Nicolas Weeger 2011-08-07

Update character speed and other attributes when consuming items from
inventory.
Andreas Kirschbaum 2011-08-05

Correctly display changes due to 'bless' spell. Add spell expiry.
Nicolas Weeger 2011-08-04

Implement "blessed 1" for TREASURE items: such items never create bad or
cursed items (GT_ONLY_GOOD).
Andreas Kirschbaum 2011-08-04

Add potion of 'testing monsters', casting probe.
Add recipe for it.
Both patches courtesy Khaleh.
Nicolas Weeger 2011-07-30

Give the alchemy level to generated potions. Fix documentation.
Nicolas Weeger 2011-07-30

Remove socket_info.nconn which gets invalid in some cases.
Nicolas Weeger 2011-07-24

Add protocol to send quest updates to client.
Add optional face to quests.
Nicolas Weeger 2011-07-23

Make container's contents browsable like the ground view.
Nicolas Weeger 2011-07-10

Randomize chests in random maps.
Nicolas Weeger 2011-07-08

Make immunity reduce symptoms when not totally immune.
This enables partial disease resistances.
Nicolas Weeger 2011-07-08

Display recipes a player knows that can use an item when examining it.
Nicolas Weeger 2011-07-08

Tentative fix for bug #3349111: invidious server crash.
Don't decrease socket_info.nconns if the socket is not available.
In some cases nconns gets decreased too much, which leads to issues.
The real fix would be to figure why there is a double decrease...
Nicolas Weeger 2011-07-05

Forbid un-locking items not in direct player's inventory.
Nicolas Weeger 2011-07-05
