@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Enable altars to have a special animation when there is a god intervention.
+Nicolas Weeger 2011-08-11
+
 Inform player of changes in wc, ac and speed.
 Nicolas Weeger 2011-08-07
 
